# LunaSeis-1

./: .gitignore  AGENTS.md  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-lock.txt
data/: README.md
docs/: COPYRIGHT_AND_RELEASE_GUIDE.md  CURRENT_STATUS.md  DATASET_CARD.md  DECISIONS.md  MODEL_CARD.md  PROJECT_CONTEXT.md  RELEASE_CHECKLIST.md  RELEASE_CLAIMS.md  REPRODUCIBILITY.md  ROADMAP.md  catalog_audit.md  contiguous_evaluation_plan_v0.1.md  continuous_scanning_result_v0.1.md  data_dictionary.md  data_publication_policy.md  event_label_audit.md  internal_presubmission_review.md  ko_smq_26_sample_audit.md  nonshallow_batch_1_audit.md  nonshallow_batch_2_audit.md  onodera_2024_catalog_audit.md  research_protocol_v0.1.md  shallow_waveform_coverage.md  shallow_window_quality_audit.md  source_verification.md  tiny_cnn_pilot_v0.1.md  unified_positive_manifest_audit.md  waveform_inventory_audit.md
literature/: literature_matrix.csv  screening_log.csv  search_log.md  state_of_the_field.md
lunaseis/: __init__.py  cli.py  inference.py  model.py
paper/: manuscript.md
release/: SHA256SUMS
scripts/: audit_catalog.py  audit_contiguous_evaluation_plan.py  audit_continuous_scanning_errors.py  audit_event_labels.py  audit_manuscript_evidence.py  audit_missed_continuous_events.py  audit_nonshallow_batch.py  audit_shallow_sample.py  audit_shallow_windows.py  audit_tiny_cnn_shortcuts.py  build_contiguous_evaluation_plan.py  build_grade_c_catalog_context.py  build_grade_c_challenge_plan.py  (+14 more)
(+125 files in other folders)
